[gd_scene load_steps=21 format=3 uid="uid://c3ffql15mo0aj"]

[ext_resource type="Script" path="res://scripts/fps_controller.gd" id="1_ilsa3"]
[ext_resource type="Script" path="res://scripts/reticle.gd" id="3_hbqju"]
[ext_resource type="Theme" uid="uid://dgsum1yjs5bmd" path="res://themes/test_theme.tres" id="4_m4maf"]
[ext_resource type="Script" path="res://scripts/debug.gd" id="5_afokp"]
[ext_resource type="Script" path="res://scripts/state_machine.gd" id="5_io35j"]
[ext_resource type="Script" path="res://scripts/idle_player_state.gd" id="6_3s3l6"]
[ext_resource type="Script" path="res://scripts/walking_player_state.gd" id="7_vepxc"]
[ext_resource type="Script" path="res://scripts/sprinting_player_state.gd" id="8_hc7fi"]
[ext_resource type="Script" path="res://scripts/crouching_player_state.gd" id="9_acy4i"]
[ext_resource type="Script" path="res://scripts/sliding_player_state.gd" id="10_ntu30"]
[ext_resource type="Script" path="res://scripts/jumping_player_state.gd" id="11_r1axy"]
[ext_resource type="Script" path="res://scripts/player_attributes_system.gd" id="12_sgp4a"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_u6tj1"]

[sub_resource type="Animation" id="Animation_iyv5u"]
resource_name = "Crouch"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.8, 1.35]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.9, 0), Vector3(0, 1.125, 0)]
}

[sub_resource type="Animation" id="Animation_d78n5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1, 0)]
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CameraController:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1.4, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CameraController:position:z")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CameraController/Camera3D:position:x")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CameraController/Camera3D:position:y")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CameraController/Camera3D:position:z")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("PlayerStateMachine/SlidingPlayerState:SPEED")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.5]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("CameraController/Camera3D:fov")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [90.0]
}

[sub_resource type="Animation" id="Animation_ckhp3"]
resource_name = "Sliding"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.9, 0), Vector3(0, 1.125, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:shape:height")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.8, 1.35]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerStateMachine/SlidingPlayerState:SPEED")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 2.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [2.5, 6.0, 4.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CameraController/Camera3D:fov")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [90.0, 112.5, 90.0]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerStateMachine/SlidingPlayerState")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(2.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"finish"
}]
}

[sub_resource type="Animation" id="Animation_k0le0"]
resource_name = "Sprinting"
length = 1.2
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraController/Camera3D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.233333, 0.00112947, 0.065, -0.0666667, -0.019917, 0.133333, 0.0314803, 0.075, 0, 0.000921406, 0, 0.000921406, -0.065, -0.0666667, -0.000509799, 0.0666666, -0.0157518, -0.075, 0, -8.03247e-05, 0, 0.001692, 0, -0.0333334, -0.00135178, 0, -0.000288388),
"times": PackedFloat32Array(0, 0.3, 0.5, 0.8, 1, 1.2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController/Camera3D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.0333333, 0.00644643, 0.066, -0.0333333, 0.00673123, 0.1, -0.00815626, -0.036, -0.1, 0.0233054, 0.133333, -0.0369535, 0.066, -0.1, 0.0060223, 0.0666666, -0.00319377, -0.036, -0.0666667, 0.0247232, 0.0333333, -0.00646963, 0, -0.0666667, -0.0747259, 0.25, 0),
"times": PackedFloat32Array(0, 0.3, 0.5, 0.8, 1, 1.2)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController/Camera3D:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3, 0.5, 0.8, 1, 1.2)
}

[sub_resource type="Animation" id="Animation_hoo4y"]
resource_name = "Walking"
length = 2.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraController:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(1.4, -0.25, 0, 0.25, 0, 1.45, -0.25, 0, 0.25, 0, 1.4, -0.25, 0, 0.25, 0, 1.45, -0.25, 0, 0.25, 0, 1.4, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController:position:z")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0bhlx"]
_data = {
"Crouch": SubResource("Animation_iyv5u"),
"RESET": SubResource("Animation_d78n5"),
"Sliding": SubResource("Animation_ckhp3"),
"Sprinting": SubResource("Animation_k0le0"),
"Walking": SubResource("Animation_hoo4y")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_388qw"]
radius = 0.2

[node name="FPSController" type="CharacterBody3D" node_paths=PackedStringArray("CAMERA_CONTROLLER", "ANIMATIONPLAYER", "CROUCH_SHAPECAST")]
script = ExtResource("1_ilsa3")
CAMERA_CONTROLLER = NodePath("CameraController")
ANIMATIONPLAYER = NodePath("AnimationPlayer")
CROUCH_SHAPECAST = NodePath("ShapeCast3D")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_u6tj1")

[node name="CameraController" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4, 0)

[node name="Camera3D" type="Camera3D" parent="CameraController"]
fov = 90.0

[node name="ReflectionProbe" type="ReflectionProbe" parent="CameraController/Camera3D"]
update_mode = 1
enable_shadows = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0bhlx")
}

[node name="ShapeCast3D" type="ShapeCast3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("SphereShape3D_388qw")
target_position = Vector3(0, 0.3, 0)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Reticle" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -13.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_hbqju")

[node name="DebugPanel" type="PanelContainer" parent="Control"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 210.0
offset_bottom = 50.0
theme = ExtResource("4_m4maf")
script = ExtResource("5_afokp")

[node name="MarginContainer" type="MarginContainer" parent="Control/DebugPanel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/DebugPanel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PlayerAttributesSystem" type="Node" parent="."]
script = ExtResource("12_sgp4a")
DX = 14

[node name="PlayerStateMachine" type="Node" parent="." node_paths=PackedStringArray("CURRENT_STATE")]
script = ExtResource("5_io35j")
CURRENT_STATE = NodePath("IdlePlayerState")

[node name="IdlePlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("6_3s3l6")

[node name="WalkingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("7_vepxc")

[node name="SprintingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("8_hc7fi")

[node name="CrouchingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("9_acy4i")

[node name="SlidingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("10_ntu30")

[node name="JumpingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("11_r1axy")

[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_player_animation_started"]
